--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css"
-    <title>Weather Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Local Weather</title>
 </head>
+
 <body>
+    <!-- Header -->
+    <header>
+        <div class="dashboard-header">
+            <h1>Climate Change</h1>
+            <h4>The only weather dashboard you need.</h4>
+        </div>
+    </header>
+
+     <!-- Card to display the current weather -->
+     <section class="current-weather">
+        <div class="city-name">Current Weather:</div>
+        <div class="current-date"></div>
+        <img src="" alt="" class="icon"></img>
+        <div class="temp">Temperature:</div>
+        <div class="humidity">Humidity:</div>
+        <div class="wind">Wind:</div>
+        </div>
+    </section>
+
+    <!-- Column for the search bar and the search history -->
+    <section class="column">
+        <div class="title">Search for Local Weather</div>
+        <div class="search">
+            <input class="searchbar" type="text">
+        </div>
+        <div class="button">
+            <button>Search <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 1024 1024"
+                    height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z">
+                    </path>
+                </svg>
+            </button>
+        </div>
+    </section>
     
+    <section id="history">
+        <div class="search-history-title">Previously Search</div>
+        <div class="search-history"></div>
+    </section>
+
+    <!-- 5 day forecast cards -->
+    <div class="forecast-cards">
+        <div class="flex-container">
+            <div class="day_1">
+                <div class="date_forcast">Date:</div>
+                <img src="" alt="" class="icon"></img>
+                <div class="temp">Temperature:</div>
+                <div class="humidity">Humidity:</div>
+                <div class="wind-speed">Wind:</div>
+            </div>
+
+            <div class="day_2">
+                <div class="date_forcast">Date:</div>
+                <img src="" alt="" class="icon"></img>
+                <div class="temp">Temperature:</div>
+                <div class="humidity">Humidity:</div>
+                <div class="wind-speed">Wind:</div>
+            </div>
+
+            <div class="day_3">
+                <div class="date_forcast">Date:</div>
+                <img src="" alt="" class="icon"></img>
+                <div class="temp">Temperature:</div>
+                <div class="humidity">Humidity:</div>
+                <div class="wind-speed">Wind:</div>
+            </div>
+
+            <div class="day_4">
+                <div class="date_forcast">Date:</div>
+                <img src="" alt="" class="icon"></img>
+                <div class="temp">Temperature:</div>
+                <div class="humidity">Humidity:</div>
+                <div class="wind-speed">Wind:</div>
+            </div>
+
+            <div class="day_5">
+                <div class="date_forcast">Date:</div>
+                <img src="" alt="" class="icon"></img>
+                <div class="temp">Temperature:</div>
+                <div class="humidity">Humidity:</div>
+                <div class="wind-speed">Wind:</div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
